2004-09-16  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm (delete_ps_fontfile): Remove debugging printout line.

2004-09-15  Ethan Merritt  <merritt@u.washington.edu>

	* plot3d.c (get_3ddata) graphics.c (boundary) x11.trm:
	Add #ifdefs so that ./configure --disable-pm3d will build successfully.

	* term/fig.trm term/epslatex.trm term/pslatex.trm term/metapost.trm
	term/tgif.trm term/pstricks.trm:  Disentangle the ordering of #ifdefs
	in the TERM_TABLE entries (MOUSE is not a subset of PM3D).

	* term/emf.trm: Remove unused label to quiet compiler warnings.

2004-09-15  Konstantin Korikov  <lostclus@ua.fm>

	* NEWS docs/gnuplot.doc src/gplt_x11.c src/set.c src/term_api.h
	src/term.c term/post.trm: Add support for character encoding koi8-u
	(cyrillic koi8 for Ukrainian users).
	SourceForge patch #966815.

2004-09-14  Ethan Merritt  <merritt@u.washington.edu>

	* demo/borders.dem demo/Makefile.am.in: Rewrite the borders demo to 
	terminate after 16 possible settings, to display the border setting in
	a label, and to execute from inside a single demo file rather than a 
	combination of two.  Thanks to Daniel Sebald for identifying that it
	needed an update.

	* src/term.c (do_arrow): Interpret (head < 0) as "draw arrowhead only".
	This allows us to retrace the arrowhead in a different linestyle if
	necessary.

	* term/post.trm (PS_arrow): Add a wrapper for the do_arrow() routine
	so that if the current linestyle is dashed we can retrace the arrowhead
	with a solid line. Addresses bug report #963213.

	* term/pslatex.trm (PSLATEX_arrow): Piggyback on PS_arrow to apply
	the same fix for pslatex.  Any other terminals with dashed lines will
	have to be fixed separately.

2004-09-13  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c: Rework the layout of the df_bin_default_columns
	array, so that the binary input code is not sensitive to the order of
	defining plot styles in gp_types.h.

2004-09-13  Ethan Merritt  <merritt@u.washington.edu>
